package com.carservice.CarService.order;

public enum OrderStatus {
    CREATING,
    NEW,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED
}
