package com.carservice.CarService.sparePart;

public enum SparePartState {
    DAMAGED,
    WHOLE,
    MISS
}
